feat: implement trainerSaveBodyMetrics
